build updated. images ref updated

--- a/app/index.html
+++ b/app/index.html
@@ -122,10 +122,10 @@
       da Universidade do porto
     </div>
     <div class="c25">
-      <img src="../images/dec.svg" alt="">    
+      <img src="images/dec.svg" alt="">    
     </div>
     <div class="c25">
-      <img src="../images/feup.svg" alt="">
+      <img src="images/feup.svg" alt="">
     </div>
   </footer>
 
