fb link updated

--- a/app/index.html
+++ b/app/index.html
@@ -126,8 +126,8 @@
       </div>
       
       <div class="fb-ref">
-        <a target="_about:blank" href="http://facebook.com/jelectrotecniafeup">
-          <img class="icon" src="images/fb.svg" alt=""> /jelectrotecniafeup
+        <a target="_about:blank" href="http://facebook.com/jeletrotecniafeup">
+          <img class="icon" src="images/fb.svg" alt=""> /jeletrotecniafeup
         </a>
       </div>
     </div>
